--- a/variables/security_groups/ux_server.yaml
+++ b/variables/security_groups/ux_server.yaml
@@ -1,5 +1,12 @@
 security_group_name: ux_server_sg
 security_group_description: security group for linux servers
+tags:
+  tag01:
+    name: "Environment"
+    value: "linux"
+  tag02:
+    name: "Name"
+    value: "ux_server_sg"
 rules:
   allow_all_outbound:
     description: allow all outbound
@@ -13,4 +20,3 @@ rules:
     from_port: 22
     to_port: 22
     protocol: tcp
-
